--- a/monge-pesoal--main/aulas senac/monge trabalho do semestre/style.css
+++ b/monge-pesoal--main/aulas senac/monge trabalho do semestre/style.css
@@ -3,7 +3,7 @@
 
 /* configurações gerais */
 *{
-  margin: 0px;
+  margin: -0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -26,7 +26,7 @@ header {
     align-items: center; /* Centraliza verticalmente os itens no header */
     padding: 10px 20px; /* Espaçamento interno */
     background-color: #fff; /* Cor de fundo opcional */
-    height: -10px;    /* Altura total do header */
+    height: 0px;    /* Altura total do header */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra leve */
     margin-block-end: 0%;
 }
@@ -95,20 +95,56 @@ nav a:first-child:hover {
     
 }
 
+/* divis de organização do corpo do texto */
 
-
-.CerterTex1{
+#CenterTex1{
     block-size: auto;
     text-align: justify;
-    background-color: #fff
-    
+    background-color: #fff;
+    margin-left: 320px;
+    margin-right: 50px;
+    padding: 10px 20px; 
+    margin-block-end: 1%;
+}
+#CenterTex2{
+    block-size: auto;
+    text-align: justify;
+    background-color: #fff;
+    margin-left: 320px;
+    margin-right: 50px;
+    padding: 10px 20px; 
+    margin-block-end: 1%;
+}
+#CenterTex3{
+    block-size: auto;
+    text-align: justify;
+    background-color: #fff;
+    margin-left: 320px;
+    margin-right: 50px;
+    padding: 10px 20px; 
+    margin-block-end: 1%;
+}
+#CenterTex4{
+    block-size: auto;
+    text-align: justify;
+    background-color: #fff;
+    margin-left: 320px;
+    margin-right: 50px;
+    padding: 10px 20px; 
+    margin-block-end: 1%;
 }
 
 
 
 #redirecionamento{
-position: absolute;
-background-color: aliceblue;
+    position: absolute;
+background-color: rgb(238, 16, 16);
+color: #fff ;
+padding: 10px 20px; 
+height: 300px;
+margin-left: 20px;
+margin-right: 1640px;
+margin-top: 0px;
 
 
 }
