--- a/monge-pesoal--main/aulas senac/mongetrabalho21.03/style.css
+++ b/monge-pesoal--main/aulas senac/mongetrabalho21.03/style.css
@@ -1,21 +1,25 @@
+body{
+    background-color:  #fdfdfd8f;
+}
+
 /* Header */
 header {
     position:static ;
     top: 0; /* Faz o header "grudar" no topo ao rolar a página */
     padding: 10px 20px; /* Espaçamento interno */
-    background-color: #D9AA71; /* Cor de fundo opcional */
+    background-color: #0065a8; /* Cor de fundo opcional */
     height: 0px;    /* Altura total do header */
     margin-block-end: 0%;
 }
 
-#h1{
+#titolo{
   
-  font-family: comic;
+   font-family: comic; /* mostra o tipo de fonte  */
 text-align: center;
-  color: #457c57;
+  color: #1179a1;
 }
 nav {
-    background-color: #ffffff;
+    background-color: #6eb4cf38;
     height: 70px;
 
     display: flex; /* Torna o nav um contêiner flexível */
@@ -24,7 +28,7 @@ nav {
 }
 
 nav > a {
-    color: #D9AA71;
+    color:  #1179a1;
     font-size: 36px;
     text-decoration: none;
     font-family: "Open Sans", sans-serif;
@@ -39,11 +43,41 @@ nav > a:hover {
 
 nav a:first-child {
     font-size: 24px; /* Aumenta o tamanho do ícone */
-    color: #333; /* Define a cor do ícone */
+    color: #000000; /* Define a cor do ícone */
     margin-right: 10px; /* Dá um pouco de espaço após o ícone */
     text-decoration: none; /* Remove sublinhado */
 }
 
 nav a:first-child:hover {
-    color: #D9A404; /* Altera a cor ao passar o mouse */
+    color:  #1179a1; /* Altera a cor ao passar o mouse */
+}
+
+
+/* index abaixo  */
+#v1{
+ background-color: #000000;
+ position: static;
+ margin-left: 10%;
+ margin-right: 60%;
+ margin-top: 3%;
+ height: 400px;
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: 15px;
+color: #ffffff;
+ text-align: end;
+ text-align: right;
+}
+
+#v2{
+    background-color: #000000;
+    position: fixed;
+    margin-left: 60%;
+    margin-right: 10%;
+    margin-top: -400px;
+    height: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+ text-align: end;
+ text-align: right;
 }
